--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,17 @@
 Package: modifiedfisher
-Title: What the Package Does (One Line, Title Case)
+Title: Non-Randomised Non-Conservative Size-α Modified Fisher Exact Test
+Description: What the package does (one paragraph).
+URL: https://github.com/pvdmeulen/modified-fisher
+BugReports: https://github.com/pvdmeulen/modified-fisher/issues
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
+    person("Peter", "van der Meulen", , "peter.vd.meulen@icloud.com", role = c("aut", "cre"),
            comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+License: GPL (>= 3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
+Imports:
+    BiasedUrn,
+    numDeriv,
+    trust
